[workspace]
exclude = ["ci/configs/", "wasmvm/libwasmvm"]
members = [
  "./contracts/dao-dao-core",
  "./contracts/external/cw-admin-factory",
    "./contracts/external/snip20-reference-impl",
  "./contracts/external/snip721-reference-impl",
    "./contracts/external/snip721-roles/",
  "./contracts/proposal/*",
  "./contracts/pre-propose/*",
  "./contracts/staking/*",
  "./contracts/voting/*",
  "./packages/*",

  # "ci/*",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/DA0-DA0/dao-contracts"
version = "2.4.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
# Please do not disable these. Doing so will cause overflow checks in
# all workspace members to stop working. Overflows should be errors.
overflow-checks = true

[workspace.dependencies]
anyhow = { version = "1.0",default-features = false }
assert_matches = {version = "1.5",default-features = false}
cosm-orc = { version = "4.0",default-features = false }
cosm-tome = {version = "0.2",default-features = false}
cw3 = {version = "1.1",default-features = false}
cw4 = { path = "./packages/cw4-1.1.2/" ,default-features = false}
cw4-group = { path = "./packages/cw4-group-1.1.2/" ,default-features = false}
env_logger = {version = "0.10",default-features = false}
once_cell = {version = "1.18",default-features = false}

proc-macro2 = {version = "1.0",default-features = false}
prost = { version = "0.12.3", features = ["prost-derive"] ,default-features = false}
prost-types = { version = "0.12.3", default-features = false }
quote = {version = "1.0",default-features = false}
rand = {version = "0.8",default-features = false}
serde-cw-value = {version = "0.7",default-features = false}
serde_json = {version = "1.0",default-features = false}
serde_yaml = {version = "0.9",default-features = false}
sg-multi-test = {version = "3.1.0",default-features = false}
sg-std = {version = "3.1.0",default-features = false}
sg721 = {version = "3.1.0",default-features = false}
sg721-base = {version = "3.1.0",default-features = false}
syn = { version = "1.0", features = ["derive"],default-features = false }
test-context = {version = "0.1",default-features = false}
wynd-utils = {path = "./packages/wynd-utils-0.4.1/",default-features = false}
bincode = {version="1.3.3",default-features = false}


# One commit ahead of version 0.3.0. Allows initialization with an
# optional owner.
cw-ownable = { path = "./packages/cw-ownable-0.5.1/",default-features = false }


cw-admin-factory = { path = "./contracts/external/cw-admin-factory", version = "2.4.0" ,default-features = false}
cw-denom = { path = "./packages/cw-denom", version = "2.4.0",default-features = false }
cw-hooks = { path = "./packages/cw-hooks", version = "2.4.0",default-features = false }
cw-paginate-storage = { path = "./packages/cw-paginate-storage", version = "2.4.0",default-features = false }
snip20-stake = { path = "./contracts/staking/snip20-stake", version = "2.4.0",default-features = false }
snip721-controllers = { path = "./packages/snip721-controllers", version = "2.4.0",default-features = false }
snip721-roles = { path = "./contracts/external/snip721-roles", version = "2.4.0",default-features = false }
dao-snip721-extensions = { path = "./packages/dao-snip721-extensions", version = "2.4.0",default-features = false }
dao-dao-core = { path = "./contracts/dao-dao-core", version = "2.4.0",default-features = false }
dao-dao-macros = { path = "./packages/dao-dao-macros", version = "2.4.0",default-features = false }
dao-hooks = { path = "./packages/dao-hooks", version = "2.4.0" ,default-features = false}
dao-interface = { path = "./packages/dao-interface", version = "2.4.0",default-features = false }
dao-pre-propose-approval-single = { path = "./contracts/pre-propose/dao-pre-propose-approval-single", version = "2.4.0",default-features = false }
dao-pre-propose-approver = { path = "./contracts/pre-propose/dao-pre-propose-approver", version = "2.4.0" ,default-features = false}
dao-pre-propose-base = { path = "./packages/dao-pre-propose-base", version = "2.4.0",default-features = false }
dao-pre-propose-multiple = { path = "./contracts/pre-propose/dao-pre-propose-multiple", version = "2.4.0" ,default-features = false}
dao-pre-propose-single = { path = "./contracts/pre-propose/dao-pre-propose-single", version = "2.4.0" ,default-features = false}
dao-proposal-condorcet = { path = "./contracts/proposal/dao-proposal-condorcet", version = "2.4.0",default-features = false }
dao-proposal-multiple = { path = "./contracts/proposal/dao-proposal-multiple", version = "2.4.0",default-features = false }
dao-proposal-single = { path = "./contracts/proposal/dao-proposal-single", version = "2.4.0",default-features = false }
dao-voting = { path = "./packages/dao-voting", version = "2.4.0",default-features = false }
dao-voting-snip20-staked = { path = "./contracts/voting/dao-voting-snip20-staked", version = "2.4.0",default-features = false }
dao-voting-cw4 = { path = "./contracts/voting/dao-voting-cw4", version = "2.4.0",default-features = false }
dao-voting-snip721-roles = { path = "./contracts/voting/dao-voting-snip721-roles", version = "2.4.0" ,default-features = false}
dao-voting-snip721-staked = { path = "./contracts/voting/dao-voting-snip721-staked", version = "2.4.0",default-features = false }
dao-voting-token-staked = { path = "./contracts/voting/dao-voting-token-staked", version = "2.4.0",default-features = false }

# v1 dependencies. used for state migrations.
cw-core-v1 = { package = "cw-core", version = "0.1.0" ,default-features = false}
cw-proposal-single-v1 = { package = "cw-proposal-single", version = "0.1.0",default-features = false }
cw-utils-v1 = { package = "cw-utils", version = "0.13",default-features = false }
cw20-stake-external-rewards-v1 = { package = "stake-cw20-external-rewards", version = "0.2.6",default-features = false }
cw20-stake-reward-distributor-v1 = { package = "stake-cw20-reward-distributor", version = "0.1.0",default-features = false }
cw20-stake-v1 = { package = "cw20-stake", version = "0.2.6",default-features = false }
cw20-staked-balance-voting-v1 = { package = "cw20-staked-balance-voting", version = "0.1.0",default-features = false }
cw4-voting-v1 = { package = "cw4-voting", version = "0.1.0",default-features = false }
stake-cw20-v03 = { package = "stake-cw20", version = "0.2.6",default-features = false }
voting-v1 = { package = "dao-voting", version = "0.1.0" ,default-features = false}


secret-utils = { path = "./packages/utils/",default-features = false }
secret-toolkit = { version = "0.10.0", default-features = false, features = [
  "utils",
  "serialization",
  "viewing-key",
  "permit",
  "storage",
  "snip20",
  "snip721",
] }
secret-storage-plus = { path = "./packages/storage-plus/" ,default-features = false}
secret-cw-controllers = { path = "./packages/controllers/",default-features = false }
secret-cw2 = { path = "./packages/cw2/",default-features = false }
secret-multi-test = { path = "./packages/multi-test/",default-features = false }

cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.11", features = [
  "stargate",
  "staking",
  "ibc3",
  "random",
],default-features = false }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.1.11",default-features = false }
schemars = {version = "0.8.12",default-features = false}
serde = { version = "1.0.158", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.21" ,default-features = false}
cosmwasm-schema = { git = "https://github.com/scrtlabs/cosmwasm/", branch = "secret",default-features = false }
snip20-reference-impl = { path = "./contracts/external/snip20-reference-impl/",default-features = false }
snip721-reference-impl = { path = "./contracts/external/snip721-reference-impl/" ,default-features = false}
cosmos-sdk-proto = { version = "0.20.0", default-features = false }
