[package]
name = "snip20_stake"
version = "0.1.0"
authors = ["AbhishekChauhan"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { workspace=true }
cosmwasm-storage = { workspace=true }
schemars = { version = "0.8.11" }
serde = { version = "1.0" }
thiserror = { version = "1.0" }
cosmwasm-schema = "1.0.0"

# Uncomment these for some common extra tools
secret-toolkit = { git = "https://github.com/scrtlabs/secret-toolkit", tag = "v0.8.0" }
# cw-storage-plus = { version = "1.0.1", default-features = false }
secret-utils={ workspace=true }
cw-ownable={ workspace=true }
dao-voting={ workspace =true }
secret-cw2={ workspace = true }
cw-hooks ={ workspace = true }
dao-hooks ={ workspace=true }
secret-cw-controllers ={ workspace=true }
secret-storage-plus ={ workspace=true }
# [patch.crates-io]
# uncomment this if you use cw-storage-plus
# cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", tag = "v1.1.9-secret" }

[[bin]]
name = "schema"
required-features = ["schema"]
