[package]
name = "dao-dao-core"
authors = ["ekez <ekez@withoutdoing.com>"]
description = "A DAO DAO core module."
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { workspace = true, features = ["ibc3"] }
cosmwasm-schema = { workspace = true }
secret-storage-plus = { workspace = true }
secret-cw2 = { workspace = true }
secret-utils = { workspace = true }
thiserror = { workspace = true }
dao-interface = { workspace = true }
dao-dao-macros = { workspace = true }
cw-paginate-storage = { workspace = true }
cw-core-v1 = { workspace = true, features = ["library"] }
secret-toolkit = { workspace = true }
snip20-reference-impl = { workspace = true }
snip721-reference-impl = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
secret-cw-controllers = { workspace = true }


[dev-dependencies]
secret-multi-test = { workspace = true, features = ["stargate"] }
cw20-base = { workspace = true }
cw721-base = { workspace = true }
# dao-proposal-sudo = { workspace = true }
# dao-voting-snip20-balance = { workspace = true }
