[package]
name = "snip20-stake-reward-distributor"
edition = "2018"
authors = ["Vernon Johnson <vtj2105@columbia.edu>, ekez <ekez@withoutdoing.com>"]
description = "Distributes snip20 staking rewards."
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }


[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
serde={workspace=true}
cw20 = { workspace = true }
cw20-base = {  workspace = true, features = ["library"] }
snip20-stake = { workspace = true, features = ["library"]}
thiserror = { workspace = true }
cw-ownable = { workspace = true }
cw20-stake-reward-distributor-v1 = { workspace = true, features = ["library"] }

secret-utils = { workspace = true }
secret-toolkit = { workspace = true, default-features = false }
secret-storage-plus = { workspace = true, default-features = false }
secret-cw-controllers = { workspace = true }
secret-cw2 = { workspace = true }
snip20-reference-impl ={ workspace=true }
schemars={ workspace=true }

[dev-dependencies]
secret-multi-test = { workspace = true }
