[package]
name = "snip20-stake"
authors = ["Ben2x4 <Ben2x4@tutanota.com>"]
description = "SNIP20 token that can be staked and staked balance can be queried at any height"
edition = "2018"
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-storage = { workspace = true }
cosmwasm-schema = { workspace = true }
serde={workspace=true}
schemars={ workspace=true }
cw-hooks = { workspace = true }
thiserror = { workspace = true }
cw-paginate-storage = { workspace = true }
cw-ownable = { workspace = true }
dao-hooks = { workspace = true }
dao-voting = { workspace = true }

cw20-stake-v1 = { workspace = true, features = ["library"] }
cw-utils-v1 = { workspace = true }

secret-utils = { workspace = true }
cosmwasm-std = { workspace = true, default-features = false }
secret-toolkit = { workspace = true, default-features = false }
secret-storage-plus = { workspace = true, default-features = false}
secret-cw-controllers = { workspace = true }
secret-cw2 = { workspace = true }

snip20-reference-impl = { workspace = true }

subtle = { version = "2.2.3", default-features = false }
base64 = "0.12.3"
hex = "0.4.2"
sha2 = { version = "0.9.1", default-features = false }
snafu = { version = "0.6.3" }
bincode = { workspace = true }

[dev-dependencies]
secret-multi-test = { workspace = true }
anyhow = { workspace = true }
