[package]
name = "dao-voting-cw4"
authors = ["Callum Anderson <callumanderson745@gmail.com>"]
description = "A DAO DAO voting module based on cw4 membership."
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-storage = { workspace = true }
cosmwasm-schema = { workspace = true }
secret-storage-plus = { workspace = true }
secret-cw2 = { workspace = true }
secret-utils = { workspace = true }
thiserror = { workspace = true }
dao-dao-macros = { workspace = true }
dao-interface = { workspace = true }
cw4 = { workspace = true }
cw4-group = { workspace = true, features = ["library"] }
secret-toolkit = { workspace = true }

[dev-dependencies]
secret-multi-test = { workspace = true }
