[package]
name = "dao-voting-snip721-staked"
authors = ["CypherApe cypherape@protonmail.com", "Jake Hartnell", "ekez"]
description = "A DAO DAO voting module based on staked cw721 tokens."
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
# use test tube feature to enable test-tube integration tests, for example
# cargo test --features "test-tube"
test-tube = []
# when writing tests you may wish to enable test-tube as a default feature
# default = ["test-tube"]


[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
secret-storage-plus = { workspace = true }
secret-cw-controllers = { workspace = true }
cw-hooks = { workspace = true }
snip721-controllers = { workspace = true }
cw-paginate-storage = { workspace = true }
secret-utils = { workspace = true }
secret-cw2 = { workspace = true }
dao-dao-macros = { workspace = true }
dao-hooks = { workspace = true }
dao-interface = { workspace = true }
dao-voting = { workspace = true }
thiserror = { workspace = true }
secret-toolkit = {workspace=true}
snip721-reference-impl = {workspace=true}
schemars = {workspace=true}
serde ={ workspace = true }
shade-protocol ={ workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
secret-multi-test = { workspace = true }
# dao-proposal-single = { workspace = true }
# dao-proposal-hook-counter = { workspace = true }
# dao-test-custom-factory = { workspace = true }
# dao-testing = { workspace = true, features = ["test-tube"] }
# osmosis-std = { workspace = true }
# osmosis-test-tube = { workspace = true }
serde = { workspace = true }
